0.0.8 (released 2008-01-10)

New icon, thanks Rui.

I'm sure there was something else. I decide I should start keeping a ChangeLog.

0.0.9 (under development)

Companies in the address book are recognised as such, and display the company
name first. They have a different default icon.

Mattb had an odd crashing bug that I don't understand, but that I'm now
guarding against anyway.

The NetNewsWire clue provider now tries to find a person based on the target of
the currently viewed headline first, then falls back to the feed URL, rather
than just using the feed URL.