@@ -9,4 +9,9 @@ class ComRancheroNetNewsWire(Extractor):
 
     def clues(self):
         if self.nnw.selectedHeadline().exists() == 0: return [] 
-        return self.clues_from_url( self.nnw.selectedHeadline().URL() ) + self.clues_from_url( self.nnw.selectedHeadline().subscription().homeURL() )
+
+        return (
+          self.clues_from_microformats( self.nnw.selectedHeadline().objectDescription() )
+          + self.clues_from_url( self.nnw.selectedHeadline().URL() )
+          + self.clues_from_url( self.nnw.selectedHeadline().subscription().homeURL() )
+        )
